--- a/trabajo-final/estilos.css
+++ b/trabajo-final/estilos.css
@@ -22,6 +22,8 @@ nav, h4{
     padding-left: 10px;
 }
 
+
+
 .links-nav{
     display: flex;
     justify-content: space-around;
@@ -29,6 +31,8 @@ nav, h4{
 }
 
 .keys{
+    display: flex;
+    flex-direction: column;
     position: absolute;
     left: 0;
     right: 0;
@@ -53,4 +57,190 @@ nav, h4{
 		 width:100px; 
 	     height:auto;
 		
+}
+/* Contenedores */
+.contenedor-top25{
+    justify-items: center;
+    align-items: center;
+
+    border-radius: 10px;
+    
+    width: 500px;
+    height: 200px;
+    position: absolute;
+    top: 50%;
+    left:0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: darkgrey;
+     
+    
+    display:grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 50% 50%;
+     padding: 10px 10px 10px 10px;
+    
+    
+}
+.contenedor-recomendados{
+    justify-items: center;
+    align-items: center;
+
+    border-radius: 10px;
+    
+    width: 500px;
+    height: 200px;
+    position: absolute;
+    top: 90%;
+    left:0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: darkgrey;
+     
+    
+    display:grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 50% 50%;
+     padding: 10px 10px 10px 10px;
+    
+    
+}
+.contenedor-ofertas{
+    justify-items: center;
+    align-items: center;
+
+    border-radius: 10px;
+    
+    width: 500px;
+    height: 200px;
+    position: absolute;
+    top: 120%;
+    left:0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: darkgrey;
+     
+    
+    display:grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 50% 50%;
+     padding: 10px 10px 10px 10px;
+    
+    
+}
+/* Contenedores  FINAL */
+.video{
+    position: absolute;
+    top: 15%;
+    right: 20%;
+    border-style:solid;
+    border-width: 5px;
+    border-radius: 5px;
+    padding-bottom: 0px;
+   
+    
+}
+.links-25 li{
+    padding-bottom: 20px;
+}
+/* -------------------------JUEGOS --------------------------------------- */
+.juego-1{
+   
+    
+    z-index: 1;
+   height: 40px;
+    width: 40px;
+     
+}
+/* -------------------------JUEGOS FINAL--------------------------------------- */
+
+li{
+    list-style: none;
+}
+/* ------------------------- TITULOS --------------------------------------- */
+.titulo{
+    text-align: center;
+    position: absolute;
+    top: 45%;
+    left:0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+.titulo-ofertas{
+    text-align: center;
+    position: absolute;
+    top: 115%;
+    left:0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+.titulo-recomendados{
+    text-align: center;
+    position: absolute;
+    top: 85%;
+    left:0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+/* ------------------------- TITULOS FINAL --------------------------------------- */
+/* ------------------------- SECTIONS  --------------------------------------- */
+.s1 {
+  background-image: url("./img/graciano-bg.png");
+  background-size: cover;
+}
+.s1 h1 {
+  position: absolute;
+  top: 30%;
+}
+
+.section h1 {
+  font-size: 64px;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -20%);
+  background: linear-gradient(to left, #ffffff, #d4d4d4);
+  background-clip: border-box;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.s2 {
+  background: linear-gradient(
+    to left top,
+    rgb(255, 255, 255),
+    rgb(230, 230, 230)
+  );
+}
+
+.s2 h1 {
+  font-size: 48px;
+  position: absolute;
+  right: -40%;
+  background: linear-gradient(to left, #000000, #a1a1a0);
+  background-clip: border-box;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.s3 {
+  background-image: url();
+} 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Playfair Display SC", serif;
+}
+
+/* ------------------------- SECTIONS FINAL  --------------------------------------- */
+body{
+    background-image: url();
+    background-size: cover;
 }
