--- a/trabajo-final/estilos.css
+++ b/trabajo-final/estilos.css
@@ -2,15 +2,22 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Fredoka One', lighter;
 }
 
 header{
+    position: fixed;
+    top:0%;
     display: flex;
     width: 90%;
-    height: 10vh;
+    height: 11vh;
     margin: auto;
     align-items: center;
+    
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
     background-color: cadetblue;
 }
 a{
@@ -36,9 +43,9 @@ nav, h4{
     position: absolute;
     left: 0;
     right: 0;
+    top: 20%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 4%;
     text-align: center;
     width:200px;
 }
@@ -92,7 +99,7 @@ nav, h4{
     width: 700px;
     height: 400px;
     position: absolute;
-    top: 100%;
+    top: 30%;
     left:0;
     right: 0;
     margin-left: auto;
@@ -116,7 +123,7 @@ nav, h4{
     width: 700px;
     height: 400px;
     position: absolute;
-    top: 150%;
+    top: 30%;
     left:0;
     right: 0;
     margin-left: auto;
@@ -173,7 +180,7 @@ li{
 .titulo-ofertas{
     text-align: center;
     position: absolute;
-    top: 145%;
+    top: 25%;
     left:0;
     right: 0;
     margin-left: auto;
@@ -182,7 +189,7 @@ li{
 .titulo-recomendados{
     text-align: center;
     position: absolute;
-    top: 95%;
+    top: 25%;
     left:0;
     right: 0;
     margin-left: auto;
@@ -190,57 +197,9 @@ li{
 }
 /* ------------------------- TITULOS FINAL --------------------------------------- */
 /* ------------------------- SECTIONS  --------------------------------------- */
-.s1 {
-  background-image: url("");
-  background-size: cover;
-}
-.s1 h1 {
-  position: absolute;
-  top: 30%;
-}
 
-.section h1 {
-  font-size: 64px;
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -20%);
-  background: linear-gradient(to left, #ffffff, #d4d4d4);
-  background-clip: border-box;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.s2 {
-  background: linear-gradient(
-    to left top,
-    rgb(255, 255, 255),
-    rgb(230, 230, 230)
-  );
-}
-
-.s2 h1 {
-  font-size: 48px;
-  position: absolute;
-  right: -40%;
-  background: linear-gradient(to left, #000000, #a1a1a0);
-  background-clip: border-box;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.s3 {
-  background-image: url();
-} 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Playfair Display SC", serif;
-}
 
 /* ------------------------- SECTIONS FINAL  --------------------------------------- */
-body{
-    background-image: url();
-    background-size: cover;
+h2{
+    font-size: 5em;
 }
