--- a/trabajo-final/estilos.css
+++ b/trabajo-final/estilos.css
@@ -18,7 +18,7 @@ header{
     right: 0;
     margin-left: auto;
     margin-right: auto;
-    background-color: cadetblue;
+    background-color:cadetblue;
 }
 a{
     text-decoration: none;
@@ -43,7 +43,7 @@ nav, h4{
     position: absolute;
     left: 0;
     right: 0;
-    top: 20%;
+    top: 15%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -57,7 +57,7 @@ nav, h4{
     padding: 5px;
     height: 120px;
     border-radius: 10%;
-    background-color: burlywood;
+    background-color:orange;
 }
 .img-menu{
          float:right;
@@ -138,6 +138,58 @@ nav, h4{
     
     
 }
+
+.contenedor-login{
+    justify-items: center;
+    align-items: center;
+
+    border-radius: 10px;
+    
+    width: 700px;
+    height: 400px;
+    position: absolute;
+    top: 30%;
+    left:0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: darkgrey;
+     
+    
+    display:grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 50% 50%;
+     padding: 10px 10px 10px 10px;
+
+}
+.contenedor-inicio{
+    text-align: center;
+    color: cadetblue;
+    
+    justify-items: center;
+    align-items: center;
+     font-size: 20px;
+    border-radius: 10px;
+    
+    width: 900px;
+    height: 500px;
+    position: absolute;
+    top: 20%;
+    left:0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: darkgrey; 
+    background-image: url("https://areajugones.sport.es/wp-content/uploads/2016/12/videojuegos.jpg") ;
+
+
+    padding: 10px 10px 10px 10px;
+    
+    
+     
+    
+    
+}
 /* ---------------------------------------- Contenedores  FINAL --------------------------------------------------*/
 .video{
     position: absolute;
@@ -147,6 +199,21 @@ nav, h4{
     border-width: 5px;
     border-radius: 5px;
     padding-bottom: 0px;
+   
+    
+}
+
+.video-inicio{
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    align-items: center;
+    border-style:solid;
+    border-width: 10px;
+    border-radius: 5px;
+    padding-bottom: 0px;
+    background-color: cadetblue;
+    border-color:cadetblue;
    
     
 }
@@ -200,6 +267,29 @@ li{
 
 
 /* ------------------------- SECTIONS FINAL  --------------------------------------- */
+
+/* ------------------------- IMAGENES  --------------------------------------- */
+.imagen-inicio{
+
+    float:left;
+			margin:10px;
+			width:300px;
+			height:auto;
+			object-fit:cover;
+}
+
+.imagen-menu{
+    
+    
+    width:30px;
+			height:auto;
+
+}
+
+/* ------------------------- IMAGENES FINAL  --------------------------------------- */
 h2{
     font-size: 5em;
+}
+h3{
+    font-size: 30px;
 }
