--- a/trabajo-final/estilos.css
+++ b/trabajo-final/estilos.css
@@ -142,6 +142,7 @@ nav, h4{
 .contenedor-login{
     justify-items: center;
     align-items: center;
+    text-align: center;
 
     border-radius: 10px;
     
@@ -156,10 +157,9 @@ nav, h4{
     background-color: darkgrey;
      
     
-    display:grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 50% 50%;
-     padding: 10px 10px 10px 10px;
+    padding-top: 150px;
+  padding-right: 190px;
+    
 
 }
 .contenedor-inicio{
