--- a/trabajo-final/estilos.css
+++ b/trabajo-final/estilos.css
@@ -101,6 +101,8 @@ nav, h4{
 		
 }
 /* ----------------------------------- Contenedores ------------------------------------------------*/
+
+
 .contenedor-top25{
     justify-items: center;
     align-items: center;
@@ -175,10 +177,16 @@ nav, h4{
 }
 
 .contenedor-login{
+    font-size:200%;
+    color:whitesmoke;
+    text-shadow: 2px 2px black;
+
+
+
     justify-items: center;
     align-items: center;
     text-align: center;
-
+    
     border-radius: 10px;
     
     width: 700px;
@@ -189,11 +197,14 @@ nav, h4{
     right: 0;
     margin-left: auto;
     margin-right: auto;
-    background-color: darkgrey;
+    
+    background-color: darkgrey; 
+    background-image: url("https://areajugones.sport.es/wp-content/uploads/2016/12/videojuegos.jpg") ;
      
     
-    padding-top: 150px;
-  padding-right: 190px;
+    
+    padding-top: 120px;
+  padding-right: 60px;
     
 
 }
@@ -393,6 +404,17 @@ li{
 /* ------------------------- SECTIONS FINAL  --------------------------------------- */
 
 /* ------------------------- IMAGENES  --------------------------------------- */
+#liMensaje{
+    vertical-align: baseline;
+    
+    padding-bottom: 15px;
+   
+}
+
+#mensajeUSR{
+    
+}
+
 .imagen-inicio{
 
     float:left;
@@ -403,6 +425,15 @@ li{
 }
 
 .imagen-menu{
+    
+    
+    width:30px;
+			height:auto;
+
+}
+
+.imagen-menu-login{
+   
     
     
     width:30px;
