--- a/trabajo-final/estilos.css
+++ b/trabajo-final/estilos.css
@@ -225,9 +225,27 @@ nav, h4{
     margin-left: auto;
     margin-right: auto;
     background-color: darkgrey;
-     
+  
     
+
+}
+
+.contenedor-creditos{
+    justify-items: center;
+    align-items: center;
+    text-align: center;
+
+    border-radius: 10px;
     
+    width: 1000px;
+    height: 550px;
+    position: absolute;
+    top: 20%;
+    left:0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: darkgrey;
   
     
 
@@ -312,6 +330,11 @@ nav, h4{
     
     
 }
+
+.dark-mode {
+    background-color: #121111;
+    color: white;
+  }
 
 
 
@@ -410,7 +433,12 @@ li{
     padding-bottom: 15px;
    
 }
+.imagen-cenec{
+    width:100px;
+    height:auto;
 
+
+}
 
 
 .imagen-inicio{
@@ -426,6 +454,14 @@ li{
     
     
     width:30px;
+			height:auto;
+
+}
+
+.imagen-menu-noche{
+    
+   
+    width:40px;
 			height:auto;
 
 }
