--- a/proyectoweb/estilos.css
+++ b/proyectoweb/estilos.css
@@ -482,3 +482,9 @@ h2{
 h3{
     font-size: 30px;
 }
+
+@media screen and (max-width: 480px) {
+    .header {
+      width: calc(100% - 80px);
+    }
+  }
